chore(package.json): add start script to run the server

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,5 +10,8 @@
   "imports": {
     "#database/*": "./database/*",
     "#server/*": "./server/.js"
+  },
+  "scripts": {
+    "start": "node ./server/server.js"
   }
 }
