--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mysql2": "^3.14.1",
-    "node": "^22.16.0"
+    "node": "^22.16.0",
+    "pg": "^8.16.0"
   },
   "type": "module",
   "imports": {
