chore: update database configuration in .env.example
- Changes variables to reflect PostgreSql migration

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,2 @@
 PORT=1234
-DB_PORT=5678
-DB_HOST=https:/my-url
-DB_USER=admin
-DB_PASSWORD=admin_pwd
-DB_DATABASE=foo
+DATABASE_URL=postgresql://...
