fix: update server imports to allow for module resolution

--- a/backend/package.json
+++ b/backend/package.json
@@ -9,7 +9,7 @@
   "type": "module",
   "imports": {
     "#database/*": "./database/*",
-    "#server/*": "./server/.js"
+    "#server/*": "./server/*"
   },
   "scripts": {
     "start": "node ./server/server.js"
